# polars-bio-bench

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
conf/: benchmark-3ops-8-7-seminar.yaml  benchmark-pull-request-fast.yaml  benchmark-pull-request.yaml  benchmark.yaml  benchmark_all.yaml  benchmark_all_pyranges1-ruranges.yaml  benchmark_count_overlaps-corner_cases.yaml  benchmark_count_overlaps-parallel.yaml  benchmark_count_overlaps.yaml  benchmark_coverage-parallel.yaml  benchmark_coverage.yaml  benchmark_dataframes.yaml  benchmark_large.yaml  benchmark_merge.yaml  benchmark_overlap-gnomad.yaml  benchmark_parallel-only.yaml  benchmark_random_new.yaml  benchmark_single_thread-4tools-pull-request.yaml  benchmark_small.yaml  common.yaml  random.yaml
conf/blog/: benchmark-e2e-real-new-benchmark-2025.yaml  benchmark_genomicranges_polars_bio-benchmark-2025.yaml  benchmark_parallel-polars-bio-pr371-all-inputs-2026-count.yaml  benchmark_single_thread-2tools-dataframes-benchmark-2026.yaml  benchmark_single_thread-3tools-benchmark-2025.yaml  benchmark_single_thread-4tools-benchmark-2026-count-pr371-all-inputs.yaml  benchmark_single_thread-4tools-benchmark-2026-count.yaml  benchmark_single_thread-4tools-benchmark-2026.yaml
conf/paper/: benchmark-4ops-1-2.yaml  benchmark-4ops-7-8-fix.yaml  benchmark-4ops-7-8-polars-bio-parallel.yaml  benchmark-4ops-7-8.yaml  benchmark-4ops-8-7-fix.yaml  benchmark-4ops-8-7-only-polars-bio.yaml  benchmark-4ops-8-7-polars-bio-parallel.yaml  benchmark-4ops-8-7-update-25-08-2025.yaml  benchmark-4ops-8-7.yaml  benchmark-4ops-replicates.yaml  benchmark-4ops-synthetic-parallel.yaml  benchmark-4ops-synthetic.yaml  benchmark-e2e-overlap.yaml  benchmark-e2e-real-only-polars-bio.yaml  benchmark-e2e-real-replicates.yaml  benchmark-e2e-real.yaml  benchmark-e2e-synthetic.yaml  benchmark-overlap-polars-bio-all-algorithms.yaml  benchmark-read_vcf.yaml
conf/variability/: benchmark-all-4ops-variability.yaml  benchmark-polars-bio-variability.yaml  test-4ops-all-variability.yaml  test-4ops-mega-variability.yaml  test-4ops-small-variability.yaml  test-all-scales-comprehensive.yaml  test-complete-all-operations-all-scales.yaml  test-extreme-10m.yaml  (+4 more)
notebooks/: combined_visualization.ipynb  gnomad.ipynb  paper-figures-r1.ipynb  paper-figures.ipynb  random-test-plots.ipynb  visualize-results.ipynb
src/: generate_dataset.py  logger.py  operations.py  plot_results.py  run-benchmarks.py  run-memory-profiler.py  utils.py
(+849 files in other folders)
